# cppress

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  TODO.md  includes.hpp  scripts.sh
cmake/: cppressConfig.cmake.in
integration/: CMakeLists.txt
libs/html/: CMakeLists.txt  app.cpp  includes.hpp
libs/html/includes/: doctype_element.hpp  document.hpp  document_parser.hpp  element.hpp  helpers.hpp  self_closing_element.hpp
libs/html/src/: document.cpp  document_parser.cpp  element.cpp  self_closing_element.cpp
libs/html/tests/: CMakeLists.txt  html_test.cpp
libs/http/: CMakeLists.txt  app.cpp  build.sh  includes.hpp
libs/http/examples/: callback_based_server.cpp  inheritance_based_server.cpp
libs/http/includes/: http_consts.hpp  http_parse_result.hpp  http_parse_state.hpp  http_request.hpp  http_request_parser.hpp  http_response.hpp  http_server.hpp
libs/http/src/: http_consts.cpp  http_request.cpp  http_request_parser.cpp  http_response.cpp  http_server.cpp
libs/http/tests/: CMakeLists.txt  http_request_parser_test.cpp  http_server_test.cpp
libs/json/: CMakeLists.txt  app.cpp  includes.hpp
libs/json/includes/: JsonArray.hpp  JsonBoolean.hpp  JsonNumber.hpp  JsonObject.hpp  JsonString.hpp  healpers.hpp  json_array.hpp  json_boolean.hpp  json_number.hpp  json_object.hpp  json_string.hpp  parser.hpp
libs/json/src/: JsonObject.cpp  json_object.cpp  parser.cpp
libs/json/tests/: CMakeLists.txt  json_test.cpp
libs/sockets/: CMakeLists.txt  app.cpp  build.sh  includes.hpp
libs/sockets/includes/: connection.hpp  data_buffer.hpp  epoll_server.hpp  exceptions.hpp  family.hpp  file_descriptor.hpp  ip_address.hpp  port.hpp  socket.hpp  socket_address.hpp  tcp_server.hpp  utilities.hpp
libs/sockets/src/: connection.cpp  epoll_server.cpp  socket.cpp  socket_address.cpp  utilities.cpp
libs/sockets/tests/: CMakeLists.txt  connection_test.cpp  data_buffer_test.cpp  epoll_server_test.cpp  socket_address_test.cpp  socket_test.cpp  utilities_test.cpp
libs/web/: CMakeLists.txt  ItemStore.hpp  app.cpp  build.sh  example.cpp  includes.hpp
libs/web/includes/: exceptions.hpp  request.hpp  response.hpp  route.hpp  router.hpp  server.hpp  types.hpp  utilities.hpp  web_exceptions.hpp  web_request.hpp  web_response.hpp  web_route.hpp  web_router.hpp  web_server.hpp  web_types.hpp
libs/web/src/: utilities.cpp
libs/web/tests/: CMakeLists.txt  web_server_test.cpp
shared/: CMakeLists.txt
shared/includes/: logger.hpp  thread_pool.hpp  utils.hpp
shared/src/: logger.cpp  utils.cpp
